<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_hight"
            android:text="@string/login_txt"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:textSize="@dimen/login_txtsize"
            android:textColor="@color/gray"
            android:gravity="center"
            android:visibility="gone"
            />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="80dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:background="@drawable/edittext_xian">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:src="@mipmap/zhanghao"/>
                <EditText
                    android:id="@+id/edtTxt_phone"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="18dp"
                    android:maxLength="11"
                    android:hint="@string/login_hit"
                    android:textColorHint="@color/gray"
                    android:lines="1"
                    android:inputType="phone"
                    android:background="@null"
                    android:textSize="15sp"

                    android:textColor="@color/alpha_gray"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_code"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="@drawable/edittext_xian">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:src="@mipmap/yanzhengma"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="18dp"
                    >
                    <EditText
                        android:id="@+id/edtTxt_code"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:textColor="@color/alpha_gray"
                        android:hint="输入验证码"
                        android:maxLength="6"
                        android:textSize="15sp"
                        android:background="@null"
                        android:textColorHint="@color/gray"/>
                    <Button
                        android:id="@+id/btn_getcode"
                        android:layout_width="88dp"
                        android:layout_height="33dp"
                        android:text="获取验证码"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:enabled="false"
                        android:inputType="number"
                        android:background="@drawable/btn_gray"
                        android:layout_marginRight="12dp"/>
                </LinearLayout>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_type2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/edittext_xian">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:background="@drawable/edittext_xian">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:src="@mipmap/mima"/>
                <EditText
                    android:id="@+id/edtTxt_pwd"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="18dp"
                    android:maxLength="20"
                    android:lines="1"
                    android:hint="@string/login_pwd_hit"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:background="@null"
                    android:textColor="@color/alpha_gray"/>
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_loginType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/city_text_size"
            android:textColor="@color/gray"
            android:layout_marginTop="12dp"
            android:layout_gravity="right"
            android:gravity="center_vertical|left"
            android:text="@string/login_forgetpwd"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="@dimen/city_text_size"
            android:layout_marginTop="20dp"
            android:background="@color/holo_red_light"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_marginRight="20dp">
            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textSize="@dimen/city_text_size"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:gravity="center_vertical|right"
                android:text="@string/txt_register"/>
    </LinearLayout>

        <Button
            android:id="@+id/resume_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="简历"/>
    </LinearLayout>

</RelativeLayout>